[gd_scene load_steps=7 format=3 uid="uid://ed74xy4xsu64"]

[ext_resource type="Texture2D" uid="uid://cu4xdlc5xgros" path="res://assets/gauss/gauss_idle.png" id="2_1550s"]
[ext_resource type="Script" uid="uid://b4uxlw61xqowc" path="res://features/diorama/PlayerController3D.gd" id="2_pctrl"]

[sub_resource type="CapsuleShape3D" id="2_xcap"]
margin = 0.1
radius = 0.42749023
height = 0.85498047

[sub_resource type="BoxShape3D" id="AttackBoxShape"]
size = Vector3(0.8, 0.8, 0.8)

[sub_resource type="StandardMaterial3D" id="AttackDebugMaterial"]
transparency = 1
albedo_color = Color(1, 0.188235, 0.188235, 0.631373)

[sub_resource type="BoxMesh" id="AttackDebugMesh"]
size = Vector3(0.8, 0.8, 0.8)

[node name="PlayerController3D" type="CharacterBody3D"]
collision_layer = 2
collision_mask = 33
script = ExtResource("2_pctrl")

[node name="Sprite3D" type="Sprite3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.48547655, 0)
pixel_size = 0.001
billboard = 1
alpha_cut = 2
texture_filter = 0
texture = ExtResource("2_1550s")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.44261092, 0)
shape = SubResource("2_xcap")

[node name="AttackHitbox" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0)
monitoring = false
monitorable = true
collision_layer = 0
collision_mask = 4

[node name="CollisionShape3D" type="CollisionShape3D" parent="AttackHitbox"]
shape = SubResource("AttackBoxShape")

[node name="DebugMesh" type="MeshInstance3D" parent="AttackHitbox"]
visible = false
mesh = SubResource("AttackDebugMesh")
material_override = SubResource("AttackDebugMaterial")
